--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "^0.5.1",
+    "react-use": "^17.6.0",
     "update": "^0.7.4"
   },
   "devDependencies": {
